# elasticfusion_with_orb_slam2

./: CMakeLists.txt  README.md
Core/src/: CMakeLists.txt  ElasticFusion.cpp  ElasticFusion.h  GlobalModel.cpp  GlobalModel.h
Core/src/Cuda/: reduce.cu
Core/src/Shaders/: depth_metric.frag
Core/src/Utils/: GPUConfig.h
GUI/src/: CMakeLists.txt  MainCalibration.cpp  MainController.cpp  MainController.h  MainControllerRos.cpp  MainControllerRos.h  MainControllerSR300.cpp  MainControllerSR300.h  MainControllerSR300_ORB.cpp  MainControllerSR300_ORB.h  MainRos.cpp  MainSR300.cpp  MainSR300_ORB.cpp  gen_image_and_camera_pose.cpp
GUI/src/Tools/: GUI.h  LiveLogReaderRos.cpp  LiveLogReaderRos.h  LiveLogReaderSR300.cpp  LiveLogReaderSR300.h  LiveLogReaderSR300_ORB.cpp  LiveLogReaderSR300_ORB.h  OpenNI2Interface.h  RosInterface.cpp  RosInterface.h  SR300Interface.cpp  SR300Interface.h  SR300_ORB_Interface.cpp  SR300_ORB_Interface.h
